--- a/OgrenciTakipSistemi.WebMVC/Views/Shared/_Layout.cshtml
+++ b/OgrenciTakipSistemi.WebMVC/Views/Shared/_Layout.cshtml
@@ -40,17 +40,16 @@
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo me-auto"><a href="index.html">OTS</a></h1>
+            <h1 class="logo me-auto"><a asp-area="" asp-action="Index" asp-controller="Home">OTS</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li><a class="active" href="index.html">Anasayfa</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="trainers.html">Trainers</a></li>
-                    <li><a href="events.html">Events</a></li>
+                    <li><a href="about.html">Hakkımızda</a></li>
+                    <li><a href="trainers.html">Akademisyenlerimiz</a></li>
+                    <li><a href="events.html">EtkinliklerEtkinlikler</a></li>
 
                     <li class="dropdown">
                         <a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -82,7 +81,6 @@
     <section id="hero" class="d-flex justify-content-center align-items-center">
         <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
             <h1>Learning Today,<br>Leading Tomorrow</h1>
-            <h2>We are team of talented designers making websites with Bootstrap</h2>
             <a asp-area="" asp-action="Index" asp-controller="Giris" class="btn-get-started">Giriş</a>
         </div>
     </section><!-- End Hero -->
