--- a/OgrenciTakipSistemi.WebMVC/Views/Giris/Index.cshtml
+++ b/OgrenciTakipSistemi.WebMVC/Views/Giris/Index.cshtml
@@ -25,7 +25,7 @@
 					<div class="_lk_de">
 						<div class="form-03-main">
 							<div asp-validation-summary="ModelOnly" class="d-flex justify-content-center text-danger"></div>
-							<form asp-area="Default" asp-controller="Giris" asp-action="Giris" method="post">
+							<form asp-controller="Giris" asp-action="Giris" method="post">
 								<div class="logo">
 									<img src="~/giris_assets/images/user.png">
 								</div>
