--- a/OgrenciTakipSistemi.WebMVC/Views/Shared/_Layout.cshtml
+++ b/OgrenciTakipSistemi.WebMVC/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                     <li><a class="active" href="index.html">Anasayfa</a></li>
                     <li><a href="about.html">Hakkımızda</a></li>
                     <li><a href="trainers.html">Akademisyenlerimiz</a></li>
-                    <li><a href="events.html">EtkinliklerEtkinlikler</a></li>
+                    <li><a href="events.html">Etkinlikler</a></li>
 
                     <li class="dropdown">
                         <a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
